--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,10 +27,13 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm test
-      - name: Build & push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v4
-        with:
-          image: sprakash101/test-ci-cd
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - uses: mr-smithers-excellent/docker-build-push@v5
+      name: Build & push Docker image
+      with:
+        image: sprakash101/test-ci-cd
+        tags: v1, latest
+        registry: registry-url.io
+        dockerfile: Dockerfile.ci
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
