--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           image: sprakash101/test-ci-cd
           tags: v1, latest
+          registry: registry.hub.docker.com/library/sprakash101
           dockerfile: Dockerfile.ci
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
