--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,7 @@ jobs:
         name: Build & push Docker image
         with:
           image: sprakash101/test-ci-cd
+          tags: v1, latest
           registry: registry.hub.docker.com/r/sprakash101/test-ci-cd
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
