--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,12 +28,12 @@ jobs:
       - run: npm ci
       - run: npm test
 
-      - uses: mr-smithers-excellent/docker-build-push@v5
-        name: Build & push Docker image
-        with:
-          image: sprakash101/test-ci-cd
-          tags: v1, latest
-          registry: registry.hub.docker.com
-          dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - uses: mr-smithers-excellent/docker-build-push@v5
+      #   name: Build & push Docker image
+      #   with:
+      #     image: sprakash101/test-ci-cd
+      #     tags: flash-lecture-version, latest
+      #     registry: registry.hub.docker.com
+      #     dockerfile: Dockerfile
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
